--- a/style.css
+++ b/style.css
@@ -1,40 +1,52 @@
 body {
     font-family: sans-serif;
-    background: none;
+    overflow: scroll;
+    background-color: red;
+    background-image: linear-gradient(to top right, white, grey);
     color:black;
+    height: 100vh;
+    width: 100vw;
 }
 
-.header p {
-    font-size: 1.5vw;
+.header {
+    vertical-align: center;
+    width: 100vw;
+    height: 90vh;
+    min-height: 500px;
+    margin: auto;
+    padding: 0vw;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.navbar p {
+    font-size: 8vw;
     text-align: center;
-    padding-top: 0px;
-}
-
-.header h1 {
-    text-align: center;
-    font-size: 6vw;
-    margin: 0px;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-}
-
-a:hover {
-    text-emphasis: bold;
+    line-height: 0px;
 }
 
 .navbar {
     text-align: center;
+    vertical-align: center;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .navbar a {
-    padding-left:0.3vw;
-    padding-right:0.3vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 .navbar img {
     width: 5vw;
+    min-width: 60px;
+    max-width: 100px;
     height: 5vw;
+    min-height: 60px;
+    max-height: 100px;
 }
