--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: sans-serif;
-    overflow: ;
+    overflow: hidden;
     background-image: linear-gradient(to top right, white, grey);
     color:black;
     height: 100vh;
@@ -10,6 +10,7 @@ body {
 canvas {
     width: 100vw;
     height: 90vh;
+     /* background-color: pink; */
 }
 
 .header {
