--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
+html, body {
+    width:  100%;
+    height: 100%;
+    margin: 0;
+  }
+
 body {
     font-family: sans-serif;
-    /* overflow: hidden; */
+    overflow: hidden;
     background-image: linear-gradient(to top right, white, grey);
     color:black;
-    height: 100vh;
-    width: 100vw;
 }
 
 canvas {
     width: 100vw;
     height: 90vh;
-     /* background-color: pink; */
+    /* background-color: pink; */
 }
 
 .header {
