--- a/style.css
+++ b/style.css
@@ -2,19 +2,65 @@ html, body {
     width:  100%;
     height: 100%;
     margin: 0;
+    font-size: 3vh;
   }
 
 body {
     font-family: sans-serif;
-    overflow: hidden;
-    background-image: linear-gradient(to top right, white, grey);
+    /* overflow: hidden; */
+    background-image: linear-gradient(to top right, white, #d3d3d3);
     color:black;
 }
 
 canvas {
     width: 100vw;
-    height: 90vh;
+    height: 98vh;
+    /* vertical-align: center; */
     /* background-color: pink; */
+    transform: translate(0vw, 1vh);
+}
+
+section {
+    position: relative;
+    width:  100%;
+    height: 100%;
+    /* background-image: linear-gradient(to top right, white, grey); */
+}
+
+section::after {
+  position: absolute;
+  /* background-image: linear-gradient(to top right, white, grey); */
+  /* bottom: 0;
+  left: 0; */
+  /* content: ''; */
+  /* width: 100%;
+  height: 100%; */
+}
+
+.gray {
+    clip-path: polygon(40% 0, 100% 0, 100% 100%, 0 100%);
+    background: #d7d7d7;
+    overflow: hidden;
+    width: 60vw;
+    height: 100%;
+    box-sizing: border-box;
+    float: right;
+    text-align: right;
+    shape-margin: 2%;
+}
+
+#about {
+    height:100%;
+}
+
+#profile {
+    width:40vw;  
+    margin-top: 100px; 
+    margin-bottom: 50px;
+    margin-left: 20vw;
+    max-width: 500px;
+    float: left;
+    clear: right;
 }
 
 .header {
@@ -24,17 +70,13 @@ canvas {
     min-height: 500px;
     margin: auto;
     padding: 0vw;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    position: absolute;
 }
 
 .navbar {
     text-align: center;
     vertical-align: center;
-    position: fixed;
+    position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -46,13 +88,7 @@ canvas {
     line-height: 0px;
 }
 
-.navbar h4 {
-    font-size: 2vw;
-    font-style: italic;
-    color: black;
-}
-
-.navbar a {
+a {
     text-decoration: none;
 }
 
@@ -65,4 +101,53 @@ canvas {
     max-height: 100px;
     padding-left: 1vw;
     padding-right: 1vw;
+    transition: opacity 0.8s ease-in-out;
+}
+
+.navbar img:hover {
+    opacity: 0.4;
+}
+
+.scroll-down {
+	position: absolute;
+	bottom: 20px;
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0;
+    width: 25px;
+    height: 25px;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    z-index: 10;
+    left: 50%;
+    animation: fade_move_down 4s ease-in-out infinite;
+}
+
+@keyframes fade_move_down {
+    0%   { transform:translate(0,-5px) rotate(45deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    100% { transform:translate(0,5px) rotate(45deg); opacity: 0; }
+  }
+
+.scroll-up {
+	position: absolute;
+	top: 20px;
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0;
+    width: 25px;
+    height: 25px;
+    border-bottom: 4px solid black;
+    border-right: 4px solid black;
+    z-index: 10;
+    left: 50%;
+    animation: fade_move_up 4s ease-in-out infinite;
+}
+
+@keyframes fade_move_up {
+    100%   { transform:translate(0,-5px) rotate(-135deg); opacity: 0;  }
+    50%  { opacity: 1;  }
+    0% { transform:translate(0,5px) rotate(-135deg); opacity: 0; }
 }
