--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ canvas {
     height: 98vh;
     /* vertical-align: center; */
     /* background-color: pink; */
-    transform: translate(0vw, 1vh);
+    /* transform: translate(0vw, 1vh); */
 }
 
 section {
