--- a/style.css
+++ b/style.css
@@ -3,12 +3,10 @@ html, body {
     height: 100%;
     margin: 0;
     font-size: 3vh;
-  }
+}
 
 body {
     font-family: sans-serif;
-    /* overflow: hidden; */
-    /* background-image: linear-gradient(to top right, white, #d3d3d3); */
     color:black;
 }
 
@@ -17,7 +15,6 @@ canvas {
     height: 100vh;
     vertical-align: center;
     /* background-color: pink; */
-    /* transform: translate(0vw, 1vh); */
 }
 
 section {
@@ -25,30 +22,23 @@ section {
     width:  100%;
     height: 100%;
     overflow: hidden;
-    /* background-image: linear-gradient(to top right, white, grey); */
+    font-family: 'Roboto', sans serif;
 }
 
 section::after {
-  /* position: absolute; */
-  /* background-image: linear-gradient(to top right, white, grey); */
-  /* bottom: 0;
-  left: 0; */
-  /* content: ''; */
   width: 100%;
   height: 100%;
 }
 
 .gray {
+    shape-outside: polygon(60% 100, 0 100%, 0 0, 100% 0);
     clip-path: polygon(40% 0, 100% 0, 100% 100%, 0 100%);
     background: #d7d7d7;
     overflow: hidden;
     width: 60vw;
     height: 100%;
-    /* box-sizing: border-box; */
     float: right;
     text-align: right;
-    z-index: -1;
-    /* shape-margin: 2%; */
 }
 
 #about {
@@ -56,11 +46,11 @@ section::after {
 }
 
 #profile {
-    width:40vw;  
+    width:35vw;  
     margin-top: 100px; 
     margin-bottom: 50px;
-    margin-left: 20vw;
-    max-width: 500px;
+    margin-left: 22vw;
+    max-width: 350px;
     float: left;
     clear: right;
 }
@@ -92,6 +82,7 @@ section::after {
 
 a {
     text-decoration: none;
+    color: gray;
 }
 
 .navbar img {
