--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
     width:  100%;
     height: 100%;
     margin: 0;
-    font-size: 3vh;
+    font-size: max(1.5vw, 20px);
 }
 
 body {
