--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ html, body {
     width:  100%;
     height: 100%;
     margin: 0;
-    font-size: max(1.5vw, 20px);
 }
 
 body {
@@ -43,6 +42,7 @@ section::after {
 
 #about {
     height:100%;
+    font-size: calc(10px + 1.6vw);
 }
 
 #profile {
