--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
     width:  100%;
     height: 100%;
     margin: 0;
+    word-wrap: break-word;
 }
 
 body {
@@ -33,11 +34,17 @@ section::after {
     shape-outside: polygon(60% 100, 0 100%, 0 0, 100% 0);
     clip-path: polygon(40% 0, 100% 0, 100% 100%, 0 100%);
     background: #d7d7d7;
-    overflow: hidden;
+    /* overflow: hidden; */
     width: 60vw;
     height: 100%;
     float: right;
-    text-align: right;
+    /* text-align: right; */
+}
+
+.title {
+    line-height: 0px;
+    font-size: 8vw;
+    font-family: 'Playfair Display', serif;
 }
 
 #about {
