--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ section::after {
     shape-outside: polygon(60% 100, 0 100%, 0 0, 100% 0);
     clip-path: polygon(40% 0, 100% 0, 100% 100%, 0 100%);
     background: #d7d7d7;
-    /* overflow: hidden; */
+    overflow: hidden;
     width: 60vw;
     height: 100%;
     float: right;
