--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ section::after {
     line-height: 0px;
     font-size: 8vw;
     font-family: 'Playfair Display', serif;
+    position: relative;
 }
 
 #about {
