--- a/style.css
+++ b/style.css
@@ -6,8 +6,16 @@ html, body {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Roboto', serif;
     color:black;
+}
+
+sup { 
+    line-height: 0; font-size: 75%; 
+}
+
+li {
+    list-style-type:none;
 }
 
 canvas {
@@ -22,7 +30,6 @@ section {
     width:  100%;
     height: 100%;
     overflow: hidden;
-    font-family: 'Roboto', sans serif;
 }
 
 section::after {
@@ -30,36 +37,15 @@ section::after {
   height: 100%;
 }
 
-.gray {
-    shape-outside: polygon(60% 100, 0 100%, 0 0, 100% 0);
-    clip-path: polygon(40% 0, 100% 0, 100% 100%, 0 100%);
-    background: #d7d7d7;
-    overflow: hidden;
-    width: 60vw;
-    height: 100%;
-    float: right;
-    /* text-align: right; */
-}
-
-.title {
-    margin-bottom: 0em;
-    font-size: 7vw;
-    font-family: 'Playfair Display', serif;
-    position: relative;
-}
-
 #about {
     height:100%;
-    font-size: calc(10px + 0.7vw);
 }
 
 #profile {
-    width:35vw;  
+    width:35vw;
+    max-width: 300px;  
     position: relative;
-    margin-top: 100px;
-    margin-bottom: 20px;
-    margin-left: 22vw;
-    max-width: 300px;
+    margin-right: 10px;
     float: left;
     clear: right;
 }
@@ -87,6 +73,7 @@ section::after {
 .navbar p {
     font-size: 8vw;
     line-height: 0px;
+    font-family: 'Playfair Display', serif;
 }
 
 a {
@@ -109,6 +96,65 @@ a {
 .navbar img:hover {
     opacity: 0.4;
 }
+
+/********************/
+
+nav {
+    height: 100%; 
+    width: 23.5vw; 
+    position: relative; 
+    z-index: 1; 
+    top: 0; 
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px;
+    /* opacity: 0.4; */
+    background-color: #d7d7d7;
+  }
+  
+  /* The navigation menu links */
+nav a {
+    padding: 0px 0px 0px 16px;
+    font-family: 'Playfair Display', serif;
+    font-size: 5vw;
+    color: black;
+    display: block;
+    opacity: 0.4;
+    
+  }
+
+nav a:hover {
+    opacity: 0.4;
+}
+
+  .page {
+      margin-left: calc(25vw + 10px);
+      margin-top: 60px;
+      font-family: 'Roboto', serif;
+      font-size: 2vh;
+  }
+
+  .page b {
+      font-size: 5vw;
+      font-family: 'Playfair Display', serif;
+  }
+
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  nav ul li a {
+    /* display: block; */
+    /* padding: 0.5rem 1rem; */
+    text-decoration: none;
+  }
+  nav ul li a.current {
+    opacity: 1;
+    transition: opacity 0.8s ease-in-out;
+  }
+/********************/
 
 .scroll-down {
 	position: absolute;
