--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     word-wrap: break-word;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -102,58 +103,60 @@ a {
 nav {
     height: 100%; 
     width: 23.5vw; 
-    position: relative; 
     z-index: 1; 
     top: 0; 
     left: 0;
-    overflow-x: hidden; /* Disable horizontal scroll */
+    /* overflow-x: hidden;  */
     padding-top: 60px;
-    /* opacity: 0.4; */
     background-color: #d7d7d7;
-  }
+    /* position: fixed; */
+    float: left;
+}
   
-  /* The navigation menu links */
 nav a {
     padding: 0px 0px 0px 16px;
     font-family: 'Playfair Display', serif;
     font-size: 5vw;
     color: black;
-    display: block;
-    opacity: 0.4;
-    
-  }
-
-nav a:hover {
+    /* display: block; */
     opacity: 0.4;
 }
 
-  .page {
-      margin-left: calc(25vw + 10px);
-      margin-top: 60px;
-      font-family: 'Roboto', serif;
-      font-size: 2vh;
-  }
+nav a:hover {
+    opacity: 1;
+    transition: opacity 0.8s ease-in-out;
+}
 
-  .page b {
-      font-size: 5vw;
-      font-family: 'Playfair Display', serif;
-  }
-
-  nav ul {
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-  }
+    }
+    
+nav ul li a {
+text-decoration: none;
+}
 
-  nav ul li a {
-    /* display: block; */
-    /* padding: 0.5rem 1rem; */
-    text-decoration: none;
-  }
-  nav ul li a.current {
-    opacity: 1;
-    transition: opacity 0.8s ease-in-out;
-  }
+nav ul li a.current {
+opacity: 1;
+transition: opacity 0.8s ease-in-out;
+}
+
+.page {
+    margin-left: calc(25vw + 10px);
+    margin-right: 10px;
+    margin-top: 60px;
+    font-family: 'Roboto', serif;
+    font-size: 2vh;
+}
+
+.page b2 {
+    font-size: 5vw;
+    font-family: 'Playfair Display', serif;
+}
+
+
+
 /********************/
 
 .scroll-down {
