--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     word-wrap: break-word;
+    /* scroll-behavior: smooth; */
 }
 
 body {
@@ -40,8 +41,6 @@ section::after {
 #about {
     height:100%;
 }
-
-
 
 .header {
     vertical-align: center;
@@ -101,7 +100,7 @@ nav {
     /* overflow-x: hidden;  */
     padding-top: 60px;
     background-color: #d7d7d7;
-    /* position: fixed; */
+    position: sticky;
     float: left;
 }
   
@@ -135,10 +134,9 @@ transition: opacity 0.8s ease-in-out;
 
 .page {
     margin-left: calc(25vw + 10px);
-    margin-right: 10px;
     margin-top: 60px;
     font-family: 'Roboto', serif;
-    font-size: 2vh;
+    font-size: 1.8vmax;
 }
 
 .page h1 {
@@ -147,12 +145,17 @@ transition: opacity 0.8s ease-in-out;
 }
 
 #profile {
-    width:35vw;
-    max-width: 300px;  
+    width:25vw;
+    max-width: 250px;  
     position: relative;
-    margin-right: 10px;
+    margin-right: calc(1.5vw + 10px);
     float: left;
     clear: right;
+}
+
+.profile-box {
+    height: 25vw;
+    max-height: 250px;
 }
 
 /********************/
